# ai-signal-brief

./: .gitignore  CONTENT-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
config/: live_ai_sources.example.json  settings.example.json  sources.example.json  topic_sources.example.json  topic_sources.live.example.json
docs/: archive-builder.md  daily-topic-discovery-architecture.md  fetch-replay-fixtures.md  first-reviewed-report-candidate-plan.md  github-publication.md  live-ai-report.md  live-fetch-adapter-interface-plan.md  live-source-discovery-readiness.md  live-source-dry-run.md  live-source-registry-extension-plan.md  manual-artifact-review.md  migration-policy.md  offline-mock-topic-discovery.md  offline-rendering.md  pages-deployment-plan.md  production-pages-readiness.md  public-readiness.md  quality-gates.md  release-checklist.md  replay-topic-discovery.md  report-schema.md  reviewed-report-dry-run-command-plan.md  reviewed-report-dry-run.md  reviewed-report-staging.md  run-metadata.md  run-schema.md  schedule-readiness.md  security-and-secrets.md  source-registry.md  static-site-builder.md  topic-scan-preview-workflow.md  topic-sources-and-candidates.md
examples/: report.example.json  run.example.json  topic-candidates.example.json
reports-reviewed/: README.md
schemas/: report.schema.json  run.schema.json  topic-candidates.schema.json
tests/: test_archive_builder.py  test_daily_ai_report_workflow.py  test_examples_load.py  test_fetch_adapter.py  test_live_dry_run_plan_or_replay.py  test_live_report.py  test_quality_gate.py  (+16 more)
(+77 files in other folders)
