[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-signal-brief"
version = "0.1.0"
description = "Source-backed AI briefing pipeline skeleton."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "spaceleoch" }
]
keywords = ["ai", "news", "reports", "provenance", "automation"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
ai-signal-brief = "ai_signal_brief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]